[package]
name = "my_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
file-rotate = "0.7.5"
flume = "0.11.0"
tokio = { version = "1.33.0", features = ["time", "rt", "rt-multi-thread", "macros"] }
